<resources>
    <string name="app_name">Tokyo Guide Tour</string>
    <string name="zanmai_name">Zanmai Sushi</string>
    <string name="zanmai_description">sushi restaurant</string>
    <string name="teppan_name">Teppan Babby</string>
    <string name="teppan_description">okonomiyaki restaurant</string>
    <string name="kagurazaka_name">Kagurazaka Ishikawa</string>
    <string name="kagurazaka_description">traditional japanese restaurant</string>
    <string name="newomen_name">NEWoMan</string>
    <string name="newomen_description">shopping center</string>
    <string name="subnade_name">Subnade</string>
    <string name="subnade_description">shopping center</string>
    <string name="marui_name">Marui Honkan</string>
    <string name="marui_description">shopping center</string>
    <string name="gyoen_name">Shinjuku Gyoen Park</string>
    <string name="gyoen_description">large park with gardens</string>
    <string name="cityhall_name">Tokyo Government Headquarters</string>
    <string name="cityhall_description">city hall with observatories</string>
    <string name="meijijingu_name">Meiji-jingū</string>
    <string name="meijijingu_description">shinto temple</string>
    <string name="granbell_name">Granbell Hotel</string>
    <string name="granbell_description">hotel</string>
    <string name="parkhyatt_name">Park Hyatt</string>
    <string name="parkhyatt_description">hotel</string>
    <string name="hilton_name">Hilton Shinjuku</string>
    <string name="hilton_description">hotel</string>
    <string name="akihabara_restaurant_toast">List of Akihabara\'s restaurant show up!</string>
    <string name="akihabara_shopping_toast">List of Akihabara\'s shopping show up!</string>
    <string name="akihabara_activity_toast">List of Akihabara\'s activity show up!</string>
    <string name="akihabara_hotel_toast">List of Akihabara\'s hotel show up!</string>
    <string name="odaiba_restaurant_toast">List of Odaiba\'s restaurant show up!</string>
    <string name="odaiba_shopping_toast">List of Odaiba\'s shopping show up!</string>
    <string name="odaiba_hotel_toast">List of Odaiba\'s hotel show up!</string>
    <string name="odaiba_activity_toast">List of Odaiba\'s activity show up!</string>
    <string name="roppongi_restaurant_toast">List of Roppongi\'s restaurant show up!</string>
    <string name="roppongi_shopping_toast">List of Roppongi\'s shopping show up!</string>
    <string name="roppongi_activity_toast">List of Roppongi\'s activity show up!</string>
    <string name="roppongi_hotel_toast">List of Roppongi\'s hotel show up!</string>
    <string name="ueno_restaurant_toast">List of Ueno\'s restaurant show up!</string>
    <string name="ueno_shopping_toast">List of Ueno\'s shopping show up!</string>
    <string name="ueno_activity_toast">List of Ueno\'s activity show up!</string>
    <string name="ueno_hotel_toast">List of Ueno\'s hotel show up!</string>
    <string name="grandbell_website">http://www.granbellhotel.jp/shinjuku/</string>
    <string name="hyatt_website">https://www.hyatt.com/en-US/hotel/japan/park-hyatt-tokyo/tyoph#</string>
    <string name="hilton_website">https://www3.hilton.com/en/hotels/japan/hilton-tokyo-TYOHITW/index.html?WT.mc_id=zELWAKN0APAC1HI2DMH3LocalSearch4DGGenericx6TYOHITW</string>
    <string name="kiyomura_website">http://www.kiyomura.co.jp/shops/detail/22</string>
    <string name="teppanbabby_website">http://www.teppanbaby.com/shinjyuku/</string>
    <string name="kagurazaka_website">http://kagurazaka-ishikawa.co.jp/</string>
    <string name="newomen_website">https://www.newoman.jp/en/</string>
    <string name="subnade_website">http://fun.subnade.co.jp/</string>
    <string name="marui_website">https://www.0101.co.jp/</string>
    <string name="gyoen_website">http://www.env.go.jp/garden/shinjukugyoen/index.html</string>
    <string name="cityhall_website">http://www.metro.tokyo.jp/</string>
    <string name="meiji_website">http://www.meijijingu.or.jp/news/190115.html</string>
    <string name="tokyo_s_finest_cultural_sites">Tokyo\'s finest cultural sites</string>
    <string name="ueno">Ueno</string>
    <string name="shopping">Shopping</string>
    <string name="restaurant">Restaurant</string>
    <string name="activity">Activity</string>
    <string name="hotel">Hotel</string>
    <string name="shinjuku">Shinjuku</string>
    <string name="tokyo_s_busiest_neighborhoods">Tokyo\'s busiest neighborhoods</string>
    <string name="roppongi">Roppongi</string>
    <string name="shopping_during_the_day_clubbing_at_night">Shopping during the day, Clubbing at night</string>
    <string name="odaiba">Odaiba</string>
    <string name="tokyo_s_artificial_island">Tokyo\'s artificial island</string>
    <string name="akihabara">Akihabara</string>
    <string name="tokyo_s_games_and_animes_atmospheres">Tokyo\'s games and animes atmospheres</string>
    <string name="shinjuku_kanji">新宿</string>
    <string name="akihabara_kanji">秋葉原</string>
    <string name="odaiba_kanji">お台場</string>
    <string name="roppongi_kanji">六本木</string>
    <string name="ueno_kanji">上野</string>
</resources>
