<?xml version="1.0" encoding="utf-8"?><!-- Layout for the Akihabara fragment -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/akihabara_imageView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/akihabara" />

    <TextView
        android:id="@+id/akihabara_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/akihabara"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/akihabara_imageView"
        app:layout_constraintTop_toTopOf="@+id/akihabara_imageView" />

    <TextView
        android:id="@+id/akihabara_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/tokyo_s_games_and_animes_atmospheres"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/akihabara_imageView"
        app:layout_constraintEnd_toEndOf="@+id/akihabara_imageView" />

    <TextView
        android:id="@+id/akihabara_restaurant_textView"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#5C6BC0"
        android:gravity="center"
        android:text="@string/restaurant"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/akihabara_imageView" />

    <TextView
        android:id="@+id/akihabara_shopping_textView"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#26A69A"
        android:gravity="center"
        android:text="@string/shopping"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/akihabara_restaurant_textView" />

    <TextView
        android:id="@+id/akihabara_activity_textView"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFCA28"
        android:gravity="center"
        android:text="@string/activity"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/akihabara_shopping_textView" />

    <TextView
        android:id="@+id/akihabara_hotel_textView"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#FF3D00"
        android:gravity="center"
        android:text="@string/hotel"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/akihabara_activity_textView" />
</android.support.constraint.ConstraintLayout>